# leveldb_msvc_integration

./: CMakeLists.txt  README.md
leveldb/: CMakeLists.txt
leveldbtest/: CMakeLists.txt  main.cpp
